--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -152,7 +152,7 @@
     border: 1px #aaa solid;
     border-radius: 10px;
     -webkit-border-radius: 10px;
-    font-size: 0.8em;
+//    font-size: 0.8em;
     .txt-title{
         font-size: 0.8em;
     }
@@ -390,9 +390,6 @@ input[type=checkbox]:checked {    background:url(../../assets/img/icone/ICONE_Ch
     margin-bottom: 10px;
 }
 
-.txt-title-D {
-    color:#008cba;
-}
 .myBg{
     background-color: #008cba;
   }
